--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,4 +8,63 @@
 <body>
     
 </body>
-</html>
+</html> -->
+<header>
+    <link rel="stylesheet" href="style/index.css">
+    <nav>
+      <div class="links">
+        <a href="#top">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </nav>
+</header>
+<section id="top">
+    <div class="titles">
+      <h1>Matthew Decker</h1>
+      <h2>Full Stack Engineer</h2>
+      <p>Here are some words about me and my coding so far.These are some more inspiring words about myself. Now I'm practing my words per minute so thisl could get sloppy.The quick brown fox jumped ove thr i thninmthat was petty fsst and thisl is enohg words for this section.</p>
+    </div>
+</section>
+<section id="projects">
+    <h2>Some Projects</h2>
+    <div class="container">
+      <div class="box1">
+        <h3>Poject1</h3>
+      </div>
+      <div class="box2">
+        <h3>Project2</h3>
+      </div>
+      <div class="box3">
+        <h3>Project3</h3>
+      </div>
+      <div class="box4">
+        <h3>Project4</h3>
+      </div>
+      <div class="box5">
+        <h3>Project5</h3>
+      </div>
+      <div class="box6">
+        <h3>Project6</h3>
+      </div>
+    </div>
+</section>
+<footer>
+    <div>
+      <h3>Socials</h3>
+      <nav class="social">
+        <a href="http://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+        <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
+      </nav>
+    </div>
+    <div>
+        <nav>
+            <div class="links2">
+              <a href="#top">About</a>
+              <a href="#Projects">Projects</a>
+              <a href="#contact">Contact</a>
+            </div>
+        </nav>
+    </div>
+</footer>
