--- a/index.html
+++ b/index.html
@@ -59,12 +59,10 @@
       </nav>
     </div>
     <div>
-        <nav>
-            <div class="links2">
-              <a href="#top">About</a>
-              <a href="#Projects">Projects</a>
-              <a href="#contact">Contact</a>
-            </div>
+        <nav class="links2">
+            <a href="#top">About</a>
+            <a href="#Projects">Projects</a>
+            <a href="#contact">Contact</a>
         </nav>
     </div>
 </footer>
