responsive enough for now

--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Spline+Sans+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
-</body>
-</html> -->
 <header>
-    <link rel="stylesheet" href="style/index.css">
     <nav>
       <div class="links">
         <a href="#top">About</a>
@@ -66,3 +64,5 @@
         </nav>
     </div>
 </footer>
+</body>
+</html> 
